<?xml version="1.0"?>
<package format="2">
  <name>tony_local_planner</name>
  <version>1.0.0</version>
  <description>A custom local planner for omnidirectional robot</description>
  <maintainer email="tonyguo@gyro.com.tw">Tony Guo</maintainer>
  <maintainer email="jacky.tseng@gyro.com.tw">Jacky Tseng</maintainer>
  <license>TODO</license>
  <author email="tonyguo@gyro.com.tw">Tony Guo</author>
  
  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>boost</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>

  <test_depend>rosbag</test_depend>
  <test_depend>actionlib</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <nav_core plugin="${prefix}/tony_local_planner_plugin.xml"/>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>